# cosyn-governance-exe

./: Cargo.toml  README.md  cosyn.toml.example
.github/workflows/: release.yml  test.yml
docs/superpowers/plans/: 2026-04-01-context-aware-gates.md  2026-04-01-cosyn-proxy.md
docs/superpowers/specs/: 2026-04-01-session-context-gates-design.md
src/: authority_loader.rs  config.rs  lib.rs  main.rs
src/coaching/: mod.rs  tips.rs
src/core/: types.rs
src/dcc/: ambiguity.rs  continuation.rs  evidence.rs  mod.rs  subject.rs  types.rs
src/input_gate/: integrity.rs  mod.rs
src/orchestrator/: mod.rs
src/provider/: anthropic.rs  mod.rs  ollama.rs  openai.rs
src/proxy/: handlers.rs  middleware.rs  mod.rs  types.rs
tests/: coaching_tests.rs  config_tests.rs  context_gate_tests.rs  dcc_enforcement.rs  gate_tests.rs  provider_tests.rs  proxy_integration.rs
