[package]
name = "cosyn"
version = "5.2.0"
edition = "2021"
authors = ["Shane Gaither"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
async-trait = "0.1"

[[bin]]
name = "cosyn"
path = "src/main.rs"

[[bin]]
name = "cosyn-cli"
path = "src/cli.rs"

[profile.release]
opt-level = 3
